# rust-web-app-test

./: README.md  docker-compose.yaml
backend/: Cargo.toml  test_api.rest
backend/src/: main.rs
backend/src/api/: expenditure_dto.rs  expenditure_routes.rs  mod.rs  utils.rs
backend/src/model/: expenditure.rs  mod.rs
backend/src/repository/: expenditure_document.rs  expenditure_repository.rs  mod.rs  mongo_repository.rs
frontend/: Cargo.toml
