[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
bson = { version = "2.4.0", features = ["chrono-0_4"] }
chrono = "0.4.22"
dotenv = "0.15.0"
env_logger = "0.9.3"
futures = "0.3.25"
log = "0.4.17"
mongodb = "2.3.1"
serde = { version = "1.0.147", features = ["derive"] }
strum_macros = "0.24.3"
strum = "0.24.1"
tokio = "1.21.2"
thiserror = "1.0.37"
uuid = { version = "1.2.1", features = ["v4"] }
common = { path = "../common" }
